# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger="makeinfo.0"
srcname="The Deja Gnu makeinfo tests"

# per-host:

# per-target:

	# everything defaults to unix for a target
target_abbrev=unix

# post-target:

	# make local configuration file, using MAKE if one is specified.
